# Prism

./: .gitignore  GPU_MIGRATION_SUMMARY.md  LICENSE  MIGRATION_INFO.md  Makefile  README.md  REFACTORING_SUMMARY.md  TODO.MD  check_hdf5_structure.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_cuda_only_ray_tracing.py  test_direct_ultra_optimized.py  test_enhanced_parallelization.py  test_fixed_accumulate_signals.py  test_multi_antenna.py  test_ray_tracer_cuda.py  test_ray_tracing_performance.py  test_real_training_data.py  test_subcarrier_parallelization.py  test_ultra_optimized_ray_tracing.py  verify_multiprocessing_cleanup.py
configs/: PERFORMANCE_OPTIMIZATION.md  README.md  china-mobile-n41.yml  chrissy.yml  ofdm-5g-sionna-debug.yml  ofdm-5g-sionna.yml  ofdm-wideband.yml  ofdm-wifi.yml  polyu.yml  sionna-debug.yml  sionna.yml  top_k_directions_README.md
data/chrissy/: chrissy.md
data/data_unsyned/: readme_data_unsyned.md
data/huawei/: huawei.md
data/polyu/: README_h5.md
data/sionna/: README.md  generator.py  polyu1.xml  requirements_sionna.txt  signal_tracking_simulation.py  sionna_simulation_data_guide.md
data/sionna/meshes/: A棟_Core_A-itu_marble.ply  A棟_Core_A-itu_metal.ply  BC翼_BC_Wing-itu_marble.ply  BC翼_BC_Wing-itu_metal.ply  B棟_Core_B-itu_marble.ply  (+98 more)
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  ARCHITECTURE_DESIGN.md  CUDA_ACCELERATION.md  DATASET.md  GPU_RAY_TRACING_README.md  GPU_TESTING_README.md  INSTALLATION.md  LOSS_FUNCTIONS.md  NETWORK_DESIGN.md  RAY_TRACING_DESIGN.md  RAY_TRACING_GUIDE.md  README.md  SIONNA_INTEGRATION.md  SPATIAL_SPECTRUM.md  SPECIFICATION.md  TECHNICAL_SPECIFICATION.md  TRAINING_DESIGN.md  TROUBLESHOOTING.md  UE_ANTENNA_CONFIGURATION.md  csi_architecture.md  technical_specification.md
examples/: antenna_embedding_sampling_example.py  correct_training_example.py  csi_spatial_spectrum_example.py  cuda_ray_tracing_example.py  importance_sampling_example.py  network_usage_example.py  neural_ray_tracer_example.py  ray_tracing_example.py  scene_size_configuration_example.py  training_with_config_example.py
scripts/: README_SIONNA_RUNNER.md  analyze.py  base_runner.py  basic_usage.py  monitor_training.py  plot.py  prism_runner.py  read_checkpoint.py  run_sionna_training_screen.sh  similarity.py  simple_test.py  sionna_runner.py  test.py  test_prism.py  test_sionna_integration.py  train.py  train_polyu.py  train_prism.py  train_sionna.py
scripts/simulation/: README.md  README_CHINA_MOBILE_N41.md  README_SIONNA.md  data_prepare.py  run_training_pipeline.py  sionna_simulation.py  sionna_simulation_china_mobile_n41.py  test_prism.py  test_sionna_simulation.py  train_prism.py
scripts/sionnna/: data_generator.py  install_sionna.sh
scripts/utils/: README.md  __init__.py  monitor_training.py  read_checkpoint.py  run_training_background.sh
src/prism/: __init__.py  config_loader.py  csi_processor.py  data_utils.py  dataloader.py  loss_functions.py  memory_optimizations.py  mlp_direction_sampler.py  model.py  ray_tracer.py  ray_tracer_base.py  ray_tracer_cpu.py  ray_tracer_cuda.py  ray_tracer_hybrid.py  renderer.py  rf_signal_processor.py  spatial_spectrum.py  training_interface.py
tests/: __init__.py  demo_position_aware_loading.py  test_advanced_features.py  test_advanced_ray_tracing.py  test_cuda_ray_tracer.py  test_enhanced_parallelization.py  test_gpu_ray_tracer.py  test_model.py  test_multi_antenna.py  test_networks.py  test_parallel_config.py  test_position_aware_data_loading.py  test_progress_monitor.py  test_ray_tracer.py  test_real_training_data.py  test_subcarrier_parallelization.py  test_training_interface_fix.py  test_training_interface_integration.py
(+34 files in other folders)
